# Piped

./: .devcontainer.json  .gitignore  Containerfile  Dockerfile  README.md  TODO.md  docker-compose.yml  justfile  mise.toml  noxfile.py  pyproject.toml  renovate.json  renovate.json5  tracked_modules.toml
.github/: dependabot.yml
.github/actions/: build-container.yml  setup-py.yml
.github/actions/build-container/: action.yml
.github/actions/get-action-ref/: action.yml
.github/actions/handle-diff-file/: action.yml
.github/actions/just-jobs/: action.yml
.github/actions/mise-init/: action.yml
.github/actions/nox-sessions/: action.yml
.github/actions/setup-py/: action.yml
.github/workflows/: build-container.yml  clippy.yml  docker-publish.yml  freeze-for-pr.yml  lint-actions.yml  lint.yml  pr-docs.yml  publish.yml  py-lint.yml  py-test.yml  reformat.yml  release-docs.yml  resync-piped.yml  rustfmt.yml  setup-py.yml  type-check.yml  update-licence.yml  update-license.yml  upgrade-dev-deps.yml  upgrade-locks.yml  verify-frozen-deps.yml  verify-locks.yml  verify-types.yml
actions/: publish.yml
artifacts/: README.md
bot/: .env.example  Dockerfile  __init__.py  config.py  docker-compose.yml  main.py  other-requirements.txt  pyproject.toml  requirements.in  requirements.txt
config/: renovate.json  renovate.json5
dev-requirements/: flake8.in  flake8.txt  nox.in  type-checking.in  type-checking.txt
github/actions/: build-container.yml  clippy.yml  docker-publish.yml  freeze-for-pr.yml  handle-diff-file.yml  lint.yml  nox-sessions.yml  pr-docs.yml  publish.yml  py-lint.yml  py-test.yml  reformat.yml  release-docs.yml  resync-piped.yml  rustfmt.yml  setup-py.yml  test.yml  type-check.yml  update-licence.yml  update-license.yml  upgrade-dev-deps.yml  upgrade-locks.yml  verify-frozen-deps.yml  verify-locks.yml  verify-types.yml
github/actions/setup-py/: action.yml
github/workflows/: build-container.yml  clippy.yml  docker-publish.yml  freeze-for-pr.yml  lint.yml  pr-docs.yml  publish.yml  py-test.yml  reformat.yml  release-docs.yml  resync-piped.yml  rustfmt.yml  type-check.yml  update-licence.yml  upgrade-locks.yml  verify-locks.yml  verify-types.yml
justfiles/: global.just  mkdocs.just  python-all.just  python-base.just  python-library.just  python-locks.just  python-test.just  rust.just
justfiles/bash_scripts/: build_python.bash  cargo_comand.bash  check_diff_file.bash  combine_coverage.bash  ensure_artifacts_dir.bash  execute_bash_script.bash  execute_py_script.bash  format_general.bash  format_markup.bash  format_misc.bash  format_python.bash  freeze_python_locks.bash  generate_docs.bash  lint_markup.bash  lint_renovate.bash  publish_python.bash  run_ruff.bash  save_diff.bash  shared.bash  slot_check.bash  spell_check.bash  test_python.bash  type_check_python.bash  verify_types.bash
justfiles/py_scripts/: __init__.py  cleanup.py  constants.py  just_call_by_groups.py  update_license.py
python/: copy_actions.py  find_nox_deps.sh  noxfile.py  noxfile.template.py  pyproject.toml
python/base-requirements/: docs.in  docs.txt  flake8.in  flake8.txt  freeze-deps.in  freeze-locks.in  freeze-locks.txt  library-flake8.in  library-flake8.txt  lint.in  lint.txt  nox.in  nox.txt  publish.in  publish.txt  reformat.in  reformat.txt  templating.in  templating.txt  tests.in  tests.txt  type-checking.in  type-checking.txt
python/piped_shared/: __init__.py  config.py
scripts/: cleanup.py  update_license.py
