[project]
name = "piped"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
bot = [
    "asgiref",
    "fastapi",
    "httpx[http2]",
    "jwt",
    "python-dateutil",
    "python-dotenv",
    "uvicorn",
    "uvloop; platform_system != 'Windows'",
]
freeze-locks = ["uv"]
lint = [
    "codespell>=2.2.2",
    "pre-commit-hooks>=4.4",
    "slotscheck>=0.16.1",
    "ruff",
]
publish = ["flit>=3.8.0"]
reformat = [
    "black>=22.10.0",
    "isort>=5.11.3",
    "pre-commit-hooks>=4.4",
    "pycln>=2.1.2",
    "sort-all>=1.2",
]
templating = ["Jinja2>=3.1.2"]
type-checking = [
    "mypy>=0.991",
    "nox",
    "pyright>=1.1.285",
    {include-group = "bot"},
    {include-group = "templating"},
]

[tool.black]
include = ".*pyi?$"
line-length = 120
skip-magic-trailing-comma = true
target-version = ["py311"]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
branch = true
timid = false
source = ["tanjun"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^if typing.TYPE_CHECKING:$"
]

[tool.ruff.lint]
select = ["ALL"]

[tool.isort]
profile = "black"
py_version = "311"
force_single_line = true

[tool.mypy]
# some good strict settings
python_version = "3.11"
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

# these are used by pyright
warn_unused_ignores = false
warn_redundant_casts = false

# compatibility with pyright
allow_redefinition = true
disable_error_code = ["type-abstract"]

[tool.piped]
codespell_ignore = "PullRequest"
default_sessions = ["reformat", "verify-markup", "flake8", "spell-check", "type-check"]
extra_typing_installs = ["./python"]
hide = ["build", "fetch-piped", "publish", "slot-check", "test", "test-publish", "test-coverage"]
path_ignore = "github\\/actions\\/.+.yml|github\\/workflows\\/.+.yml"  # TODO: only ignore for verify-markup
top_level_targets = ["./bot", "./noxfile.py", "./python"]
version_constraint = "3.11"

[tool.piped.github_actions."*"]
default_py_ver = "3.11"
piped_path = "."

[tool.piped.github_actions.docker_publish]
[tool.piped.github_actions.freeze_for_pr]
[tool.piped.github_actions.lint]
[tool.piped.github_actions.reformat]
[tool.piped.github_actions.resync_piped]
FILTERS = ["github/actions/**", "github/workflows/*", "pyproject.toml"]

[tool.piped.github_actions.type_check]
[tool.piped.github_actions.update_licence]
[tool.piped.github_actions.upgrade_locks]

[tool.pyright]
include = ["bot/main.py", "noxfile.py", "python"]

pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"  # Is only "warning" on strict mode.

# Error code which are disabled even when general strict.
reportShadowedImports = "error"
reportCallInDefaultInitializer = "none"  # Ended up just complaining about cases where this was fine (e.g. timedeltas).
reportImplicitStringConcatenation = "none"  # Conflicts with flake8 config.
reportMissingSuperCall = "none"  # Way too strict (requires calls to `object.__init__`).
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "none"  # Enforces doing `_ = ...`.

# Error codes which lead to too many false-positives.
reportIncompatibleMethodOverride = "warning"    # This relies on ordering for key-word only arguments
                                                # which is more annoying than it's worth
reportUnknownMemberType = "warning"             # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"           # Pretty much the same as reportUnknownMemberType
reportUnknownLambdaType = "warning"
reportImportCycles = "warning"                  # This isn't necessarily an issue if it's type checking only.
reportUnknownVariableType = "warning"           # Lotta false-positives, might fix/change later.

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true
